--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -12,7 +12,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
-      new Vue({
+      var vm = new Vue({
         el: '#app',
         data: {
           message: 'Hello Vue'
@@ -32,8 +32,8 @@
         updated : function(){
           console.log("update");
         },
-        destoryed : function(){
-          console.log("destoryed");
+        destroyed : function(){
+          console.log("destroyed");
         },
       })
     </script>
