--- a/quiz/index_03-2.html
+++ b/quiz/index_03-2.html
@@ -18,6 +18,6 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="js/app_03-2.js"></script>
+    <script src="../quiz/js/app_03-2.js"></script>
 </body>
 </html>
